2007-12-30  Dalibor Topic  <robilad@kaffe.org>

	* developers/build_mathnamespace, developers/math_symbols: Removed.
	* Makefile.am (EXTRA_DIST): Removed developers/build_mathnamespace,
	developers/math_symbols.

2007-12-30  Dalibor Topic  <robilad@kaffe.org>

	* developers/boehm-with-kaffe.patch: Removed.
	* Makefile.am (EXTRA_DIST): Removed developers/boehm-with-kaffe.patch.

2007-12-30  Dalibor Topic  <robilad@kaffe.org>

	* .cvsignore: Added CScope database files.

2007-12-30  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/linux/md.h (SP_OFFSET): Set to 3 to fix crashes with jthreads 
	caused by bad SP_OFFSET. Still crashes for me later, though.

2007-12-30  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Downgrade error when not building with gcc to warning.

2007-12-29  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/boehm-gc/gc2.c (KaffeGC_MarkAddress),
	kaffe/kaffevm/boehm-gc/gc2.h (gcMark): Replace GC_PTR by void * to fix
	building with Boehm GC 7.0.

2007-12-25  Dalibor Topic  <robilad@kaffe.org>

	Fix for #120.
	
	* test/regression/Makefile.am (XFAIL_TESTS): Removed DateFormatTest.java again,
	as it was my operating system installation that didn't have a time zone set that
	caused the test to fail. Yay me.

	Reported by:  Ito Kazumitsu  <kaz@maczuka.gcd.org>

2007-12-24  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* kaffe/man/kaffe.1.in: Updated according to kaffe.1.xml.

2007-12-24  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* test/regression/DateFormatTest.java: Corrected a comment.

2007-12-24  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c (start_this_sucker_on_a_new_frame): 
	Removed NONRETURNING to fix compiler warning.

2007-12-23  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jit/machine.c (finishInsnSequence): 
	Removed superflous cast of jch->code_start to char *,
	cast jch->pool to nativecode * instead of char * to fix
	compiler warning.
	(installMethodCode): Changed cast of code->code to 