@@ -1,12 +1,0 @@
-## run from libraries/javalib
-## find all java sources
-## which contain the string "of GNU Classpath"
-## and print out the files found
-## pass it to xargs to diff them one by one against the classpath dir
-## grep for diffs
-## use awk to output just the filenames
-##
-## To use this, you need to set the CPATH_SOURCE environment veriable
-## the directory where you've put the classpath CVS sources
-##
-find . -name "*.java" | xargs grep -l 2>/dev/null "of GNU Classpath" | xargs -n 1 -iXXX diff -u XXX $CPATH_SOURCE/XXX | grep "+++" | awk '{ print $2 }'
