@@ -1,3 +1,8 @@
+2007-12-31  Dalibor Topic  <robilad@kaffe.org>
+
+	* developers/check-classpath-merge-status, developers/check-classpath-unmerged, 
+	developers/resync-classpath.sh: Removed.
+
 2007-12-30  Dalibor Topic  <robilad@kaffe.org>
 
 	* developers/build_mathnamespace, developers/math_symbols: Removed.
